# sdtquest

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  Makefile  README.md  TASK1_COMPLETION_REPORT.md  TASK2_COMPLETION_REPORT.md  pyproject.toml  verify_scaffold.py
.claude/: settings.local.json
.claude/skills/: git-push.md
docs/: code-architecture.md  design-dingtalk-qa-bot.md  dev-tasks.md
scripts/: build_knowledge.py  git-push.sh  import_docs.py  parse_code.py  seed_classifier.py
src/: config.py  main.py
src/analyzer/: __init__.py  classifier.py  reporter.py  summarizer.py
src/api/: __init__.py  app.py  deps.py
src/api/routes/: __init__.py  analytics.py  chat.py  health.py  knowledge.py
src/bot/: __init__.py  handler.py  router.py  sender.py  session.py
src/domain/: __init__.py  enums.py  exceptions.py  ports.py
src/domain/models/: __init__.py  answer.py  conversation.py  knowledge.py  question.py
src/infrastructure/: __init__.py  database.py
src/infrastructure/repositories/: __init__.py  (+2 more)
src/llm/: __init__.py  client.py  templates.py
src/parser/: __init__.py  api_parser.py  builder.py  component_parser.py  models.py  router_parser.py  script_analyzer.py  store_parser.py  ts_utils.py  vue_parser.py
src/rag/: __init__.py  context.py  embedding.py  pipeline.py  retriever.py  vectorstore.py
src/services/: __init__.py  analytics_service.py  knowledge_service.py  qa_service.py
src/shared/: __init__.py  cache.py  constants.py  utils.py
tests/: conftest.py
tests/integration/: test_qa_pipeline.py
tests/unit/: test_critical_fixes.py
(+34 files in other folders)
